--- a/css/custom.css
+++ b/css/custom.css
@@ -25,15 +25,20 @@ tbody {
 /* start spriting */
 .icons { background: url(../img/sprite.png) no-repeat top left; display: block;}
 .iconBTS{ background-position: 0 0; width: 16px; height: 16px; } 
-.iconGODZ{ background-position: 0 -18px; width: 16px; height: 16px; } 
-.iconJD{ background-position: 0 -36px; width: 16px; height: 16px; } 
-.iconLD{ background-position: 0 -54px; width: 16px; height: 16px; } 
-.iconO{ background-position: 0 -72px; width: 16px; height: 16px; } 
-.iconPURGE{ background-position: 0 -90px; width: 16px; height: 16px; } 
-.iconSAGAN{ background-position: 0 -108px; width: 16px; height: 16px; } 
-.iconSHEEV{ background-position: 0 -126px; width: 16px; height: 16px; } 
-.iconT{ background-position: 0 -144px; width: 16px; height: 16px; } 
-.iconYT{ background-position: 0 -162px; width: 16px; height: 16px; } 
+.iconLUMI{ background-position: 0 -18px; width: 16px; height: 16px; } 
+.iconEG{ background-position: 0 -36px; width: 16px; height: 16px; } 
+.iconEPI{ background-position: 0 -54px; width: 16px; height: 16px; } 
+.iconGODZ{ background-position: 0 -72px; width: 16px; height: 16px; } 
+.iconJD{ background-position: 0 -90px; width: 16px; height: 16px; } 
+.iconLD{ background-position: 0 -108px; width: 16px; height: 16px; } 
+.iconNEO{ background-position: 0 -126px; width: 16px; height: 16px; } 
+.icono{ background-position: 0 -144px; width: 16px; height: 16px; } 
+.iconPURGE{ background-position: 0 -162px; width: 16px; height: 16px; } 
+.iconSAGAN{ background-position: 0 -180px; width: 16px; height: 16px; } 
+.iconSHEEV{ background-position: 0 -198px; width: 16px; height: 16px; } 
+.icont{ background-position: 0 -216px; width: 16px; height: 16px; } 
+.iconTPL{ background-position: 0 -234px; width: 16px; height: 16px; } 
+.iconyt{ background-position: 0 -252px; width: 16px; height: 16px; }
 
 #gg_acc_matches tr, #jd_matches tr, #streams_vods tr, #rankings tr, #news tr {
 	cursor:pointer;
