--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 body {
-	width:330px;
+	width:390px;
 }
 .gif {
 	background:url("../img/ajax-loader.gif");
@@ -25,20 +25,24 @@ tbody {
 /* start spriting */
 .icons { background: url(../img/sprite.png) no-repeat top left; display: block;}
 .iconBTS{ background-position: 0 0; width: 16px; height: 16px; } 
-.iconLUMI{ background-position: 0 -18px; width: 16px; height: 16px; } 
-.iconEG{ background-position: 0 -36px; width: 16px; height: 16px; } 
-.iconEPI{ background-position: 0 -54px; width: 16px; height: 16px; } 
-.iconGODZ{ background-position: 0 -72px; width: 16px; height: 16px; } 
-.iconJD{ background-position: 0 -90px; width: 16px; height: 16px; } 
-.iconLD{ background-position: 0 -108px; width: 16px; height: 16px; } 
-.iconNEO{ background-position: 0 -126px; width: 16px; height: 16px; } 
-.icono{ background-position: 0 -144px; width: 16px; height: 16px; } 
-.iconPURGE{ background-position: 0 -162px; width: 16px; height: 16px; } 
-.iconSAGAN{ background-position: 0 -180px; width: 16px; height: 16px; } 
-.iconSHEEV{ background-position: 0 -198px; width: 16px; height: 16px; } 
-.icont{ background-position: 0 -216px; width: 16px; height: 16px; } 
-.iconTPL{ background-position: 0 -234px; width: 16px; height: 16px; } 
-.iconyt{ background-position: 0 -252px; width: 16px; height: 16px; }
+.iconD2{ background-position: -17px 0; width: 16px; height: 16px; } 
+.iconDC{ background-position: -34px 0; width: 16px; height: 16px; } 
+.iconDH{ background-position: -51px 0; width: 16px; height: 16px; } 
+.iconEG{ background-position: -68px 0; width: 16px; height: 16px; } 
+.iconEPI{ background-position: -85px 0; width: 16px; height: 16px; } 
+.iconGODZ{ background-position: -102px 0; width: 16px; height: 16px; } 
+.iconJD{ background-position: -119px 0; width: 16px; height: 16px; } 
+.iconLD{ background-position: -136px 0; width: 16px; height: 16px; } 
+.iconNEO{ background-position: -153px 0; width: 16px; height: 16px; } 
+.iconO{ background-position: -170px 0; width: 16px; height: 16px; } 
+.iconPURGE{ background-position: -187px 0; width: 16px; height: 16px; } 
+.iconSAGAN{ background-position: -204px 0; width: 16px; height: 16px; } 
+.iconSHEEV{ background-position: -221px 0; width: 16px; height: 16px; } 
+.iconT{ background-position: -238px 0; width: 16px; height: 16px; } 
+.iconTPL{ background-position: -255px 0; width: 16px; height: 16px; } 
+.iconWO{ background-position: -272px 0; width: 16px; height: 16px; } 
+.iconYT{ background-position: -289px 0; width: 16px; height: 16px; } 
+
 
 #gg_acc_matches tr, #jd_matches tr, #streams_vods tr, #rankings tr, #news tr {
 	cursor:pointer;
@@ -53,6 +57,7 @@ tbody {
 }
 .permalink {
 	opacity: 0.7;
+	cursor: pointer;
 	float: right;
 }
 .permalink:hover {
@@ -90,4 +95,23 @@ tbody {
 }
 .tooltip-inner {
 	max-width: 240px !important;
+}
+
+.submenu {
+/*	border-top: 0 !important;
+	margin-top: 1px !important;*/
+}
+
+.menutab {
+	min-width: 0 !important;
+}
+
+.tabs-left {
+	width: 50px;
+	float: left;
+	margin-right: -3px;
+}
+
+.alignborder {
+	border-left: 1px solid #ddd;
 }
