--- a/css/custom.css
+++ b/css/custom.css
@@ -45,7 +45,7 @@ tbody {
 .iconYT{ background-position: -289px 0; width: 16px; height: 16px; } 
 
 
-#gg_acc_matches tr, #jd_matches tr, #streams_vods tr, #rankings tr, #news tr {
+#gg_acc_matches tr, #jd_matches tr, #dd2_matches tr, #streams_vods tr, #rankings tr, #news tr {
 	cursor:pointer;
 }
 .faq {
