no more permsission and fixed dates

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,7 +22,7 @@ tbody {
 	margin-left:18px;
 }
 
-#tbody_dd2UpMatches img {
+.dd2-teamimg {
 	width: 28px;
 	height: 18px;
 	background-color: #000;
